2007-02-19  Prakash Punnoor <prakash@punnoor.de>

	* admin/CMakeModules/FindOpenALBackends.cmake: add definitions
	only to CFLAGS to prevent nasm/yasm picking them up

2007-02-18  Prakash Punnoor <prakash@punnoor.de>

	* admin/CMakeModules/CMakeASMInformation.cmake: sync to
	aften version
	
	* src/arch/i386/x86_cpu_caps_detect_prk.nasm: fix segment
	label

2006-11-01  Prakash Punnoor <prakash@punnoor.de>

	* src/backends/alc_backend_darwin.c: make it compilable and
	mostly warning-free
	
	* src/al_main.h, src/al_main.c: put _alFloatMul pointer into
	object and initialise to make it compilable on Darwin
	
	* src/audioconvert/ac_misc.c: simplify and get rid of some
	warnings
	
	* src/extensions/al_ext_vorbis.c: rename shadowed var
	
	* configure.ac, admin/CMakeModules/CMakeASMInformation.cmake:
	pass correct ASM flags for Intel Macs

2006-10-30  Prakash Punnoor <prakash@punnoor.de>

	* admin/CMakeModules/FindCompilerSIMDFlags.cmake: deleted
	
	* Makefile.am: update extra files
	
	* src/al_debug.c: prevent warning if _GNU_SOURCE was alread defined
	
	* src/arch/i386/x86_cpu_caps_detect_prk.nasm: fix nasm not generating
	symbol

2006-10-30  Sven Panne  <sven.panne@aedion.de>

	* src/extensions/al_ext_vorbis.c: Added a workaround for incorrect Ogg
	Vorbis headers, avoiding a harmless GCC warning.

	* src/al_dlopen.c, src/al_dlopen.h, src/al_ext.c, src/alc/alc_context.c:
	Centralized casts which are not allowed in ISO C. They are necessary,
	anyway, due to API bugs in POSIX and OpenAL.

	* src/al_buffer.c: Fixed AL_SIZE buffer query.

	* src/al_threadlib.c: Simplified POSIX threading a bit.

	* src/al_dlopen.c, src/al_dlopen.h: Reverted changes to dlopen stuff.

	* src/arch/i386/x86_simd_support_prk.h: Warning police.

	* src/Makefile.am: Use local headers when compiling convenience library,
	this unbreaks the compilation when no/old OpenAL headers are already
	installed on the system.

2006-10-29  Prakash Punnoor <prakash@punnoor.de>
