@@ -1,3 +1,7 @@
+2007-04-14  Prakash Punnoor <prakash@punnoor.de>
+
+	* src/al_buffer.c : optimization and correct error handling
+
 2007-02-19  Prakash Punnoor <prakash@punnoor.de>
 
 	* admin/CMakeModules/FindOpenALBackends.cmake: add definitions
